--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,8 @@ local_settings.py
 
 .env
 db.sqlite3
+
+
+#large model not to add to git
+# https://github.com/oussafik/HandWrinting-Digit-Recognition/blob/main/mnist.h5
+mnist.h5
