--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-asgiref==3.8.1
-backports.zoneinfo==0.2.1
-Django==4.2.13
-numpy==1.24.4
-opencv-python==4.10.0.84
-sqlparse==0.5.0
-typing_extensions==4.12.2
+Django==4
+django-cors-headers
+opencv-python
+tensorflow
